--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
   influxdb:
     container_name: influxdb
     image: influxdb:2.4.0
+    restart: unless-stopped
     ports:
       - '8086:8086'
     volumes:
